testsuite/tests/parsetree/test_ppx.compilers.reference
File "source_jane_street.ml", line 168, characters 0-24:
168 | type t = #(int * float#)
      ^^^^^^^^^^^^^^^^^^^^^^^^
Error: Multiple definition of the type name "t".
       Names must be unique in a given structure or signature.
